--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PTH_3DFRONT_SCENES=/home/martinbucher/git/stan-24-sgllm/data/3D-FRONT
-PTH_3DFUTURE_ASSETS=/home/martinbucher/git/stan-24-sgllm/data/3D-FUTURE-assets
+PTH_3DFRONT_SCENES=<your_path_to_3D_FRONT>
+PTH_3DFUTURE_ASSETS=<your_path_3D_FUTURE>
 
 PTH_INVALID_ROOMS=./data/metadata/invalid_threed_front_rooms.txt
 PTH_ASSETS_METADATA=./data/metadata/model_info_3dfuture_assets.json
